# NumPDE

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .nvim.lua  .pre-commit-config.yaml  README.md
homeworks/: CMakeLists.txt
homeworks/AxisymmetricBVP/mastersolution/: axisymmetricbvp.h
homeworks/AxisymmetricBVP/mastersolution/test/: dependencies.cmake
homeworks/AxisymmetricBVP/mysolution/: axisymmetricbvp.cc
homeworks/AxisymmetricBVP/mysolution/test/: axisymmetricbvp_test.cc
homeworks/AxisymmetricBVP/templates/: axisymmetricbvp_main.cc
homeworks/BlackBodyRadiation/mastersolution/: blackbodyradiation.cc  blackbodyradiation.h
homeworks/BlackBodyRadiation/mysolution/: blackbodyradiation.cc  blackbodyradiation_main.cc  dependencies.cmake
homeworks/BlackBodyRadiation/templates/test/: blackbodyradiation_test.cc
homeworks/FVMShallowWater/mastersolution/test/: fvmshallowwater_test.cc
homeworks/FVMShallowWater/templates/test/: fvmshallowwater_test.cc
homeworks/HodgeLaplacian2D/: README.md
homeworks/HodgeLaplacian2D/mastersolution/: hodgelaplacian2d.cc  hodgelaplacian2d.h
homeworks/HodgeLaplacian2D/mysolution/: hodgelaplacian2d.cc
homeworks/HodgeLaplacian2D/templates/: dependencies.cmake  hodgelaplacian2d.cc  hodgelaplacian2d.h
homeworks/HodgeLaplacian2D/templates/test/: dependencies.cmake
homeworks/IRKDegenerateEvl/mastersolution/: irkdegenerateevl.h
homeworks/IRKDegenerateEvl/mastersolution/test/: irkdegenerateevl_test.cc
homeworks/IRKDegenerateEvl/mysolution/test/: irkdegenerateevl_test.cc
homeworks/IRKDegenerateEvl/templates/: irkdegenerateevl.h
homeworks/IncidenceMatrices/mastersolution/: incidencematrices.cc
homeworks/IncidenceMatrices/mysolution/: incidencematrices.cc
homeworks/IncidenceMatrices/templates/: incidencematrices.cc  incidencematrices.h  incidencematrices_main.cc
homeworks/LeapfrogDissipativeWave/mastersolution/: leapfrogdissipativewave.cc
homeworks/LeapfrogDissipativeWave/mysolution/: leapfrogdissipativewave.cc  leapfrogdissipativewave.h
homeworks/LeastSquaresAdvection/mastersolution/: leastsquaresadvection.h
homeworks/LeastSquaresAdvection/mysolution/: leastsquaresadvection.h
homeworks/LeastSquaresAdvection/templates/: leastsquaresadvection.cc
homeworks/LinearFE1D/mastersolution/: linearfe1d.h
homeworks/LinearFE1D/templates/: linearfe1d.h  linearfe1d_main.cc
homeworks/MagDiffWire/: README.md
homeworks/MagDiffWire/mastersolution/: magdiffwire.cc  magdiffwire.h
homeworks/MagDiffWire/mysolution/: magdiffwire.cc  magdiffwire.h
homeworks/MagDiffWire/templates/: dependencies.cmake  magdiffwire.cc  magdiffwire_main.cc
homeworks/MagStat2D/mastersolution/: magstat2d.cc  magstat2d.h
homeworks/MagStat2D/mysolution/: magstat2d.h
homeworks/MaxwellEvlTM/mastersolution/: maxwellevltm_main.cc
homeworks/MaxwellEvlTM/mysolution/: dependencies.cmake  maxwellevltm.cc
homeworks/MaxwellEvlTM/templates/: maxwellevltm.h
homeworks/NeumannDataRecovery/mastersolution/: neumanndatarecovery.h
homeworks/ParametricElementMatrices/mysolution/: fesourceelemvecprovider.cc
homeworks/ProjectionOntoGradients/mastersolution/: projectionontogradients.h
homeworks/ProjectionOntoGradients/templates/: projectionontogradients.h  projectionontogradients_main.cc
homeworks/StokesMINIElement/mastersolution/: stokesminielement.h  stokesminielement_main.cc
homeworks/StokesMINIElement/mysolution/: stokesminielement.h
homeworks/StokesMINIElement/templates/: stokesminielement.h
homeworks/StokesPipeFlow/mastersolution/: stokespipeflow.cc  stokespipeflow.h
homeworks/StokesPipeFlow/templates/: stokespipeflow.cc  stokespipeflow.h
homeworks/StokesStabP1FEM/mastersolution/: dependencies.cmake
homeworks/StokesStabP1FEM/templates/: stokesstabp1fem.cc  stokesstabp1fem_main.cc
homeworks/SymplecticTimesteppingWaves/mastersolution/: symplectictimesteppingwaves.h
homeworks/SymplecticTimesteppingWaves/mysolution/: symplectictimesteppingwaves.h
homeworks/TaylorHoodNonMonolithic/mastersolution/: taylorhoodnonmonolithic.cc  taylorhoodnonmonolithic.h
homeworks/TaylorHoodNonMonolithic/templates/: taylorhoodnonmonolithic.h
(+78 files in other folders)
