cmake_minimum_required(VERSION 3.10)

project(homeworks)  # only line that differs from developers/CMakeLists.txt

# Add custom targets
include("../cmake/modules/custom_targets.cmake")
get_custom_test_targets()

add_subdirectory(AdvectionSUPG)
add_subdirectory(AvgValBoundary)
add_subdirectory(BoundaryWave)
add_subdirectory(Brachistochrone)
add_subdirectory(CLEmpiricFlux)
add_subdirectory(ConsLawWithSource)
add_subdirectory(CoupledSecondOrderBVP)
add_subdirectory(CrossProd)
add_subdirectory(ElementMatrixComputation)
add_subdirectory(ExponentialIntegrator)
add_subdirectory(FiniteVolumeRobin)
add_subdirectory(FisherKPP)
add_subdirectory(GaussLobattoParabolic)
add_subdirectory(IPDGFEM)
add_subdirectory(HierarchicalErrorEstimator)
add_subdirectory(GradientFlow)
add_subdirectory(InitCondLV)
add_subdirectory(ImplRK3Prey)
add_subdirectory(LFPPDofHandling)
add_subdirectory(LengthOfBoundary)
add_subdirectory(MIRK)
add_subdirectory(LinearFE1D)
add_subdirectory(LinFeReactDiff)
add_subdirectory(MaximumPrinciple)
add_subdirectory(MatODE)
add_subdirectory(MinimalGraphSurface)
add_subdirectory(Mehrstellenverfahren)
add_subdirectory(NitscheMethod)
add_subdirectory(NLMatODE)
add_subdirectory(OrdNotAll)
add_subdirectory(NumPDESetup)
add_subdirectory(OutputImpedanceBVP)
add_subdirectory(PML1D)
add_subdirectory(ParametricFiniteElements)
add_subdirectory(ParametricElementMatrices)
add_subdirectory(PointEvaluationRhs)
add_subdirectory(ProjectionOntoGradients)
add_subdirectory(PotentialFlow)
add_subdirectory(RadauThreeTimestepping)
add_subdirectory(RK3Prey)
add_subdirectory(ResidualErrorEstimator)
add_subdirectory(SemImpRK)
add_subdirectory(SobolevEvolutionProblem)
add_subdirectory(SimpleLinearFiniteElements)
add_subdirectory(StabRK3)
add_subdirectory(StationaryCurrents)
add_subdirectory(SymplecticTimestepping)
add_subdirectory(SymplecticTimesteppingWaves)
add_subdirectory(TaylorODE)
add_subdirectory(SystemODE)
add_subdirectory(TransformationOfGalerkinMatrices)
add_subdirectory(TestQuadratureRules)
add_subdirectory(TranspSemiLagr)
add_subdirectory(UpwindQuadrature)
add_subdirectory(WaveABC2D)
add_subdirectory(ZienkiewiczZhuEstimator)
add_subdirectory(AsymptoticCvgFEM)
add_subdirectory(SemilinearEllipticBVP)
add_subdirectory(SUFEM)
add_subdirectory(ConvBLFMatrixProvider)
add_subdirectory(BlendedParameterization)
add_subdirectory(IMEXRKSSM)
add_subdirectory(SolAvgBoundary)
add_subdirectory(GuyerKrumhansl)
add_subdirectory(PLaplacian)
add_subdirectory(IncidenceMatrices)
add_subdirectory(NonConformingCrouzeixRaviartFiniteElements)
add_subdirectory(BurgersEquation)
add_subdirectory(AdvectionFV2D)
add_subdirectory(DiscontinuousGalerkin1D)
add_subdirectory(DebuggingWithGDB)
add_subdirectory(DebuggingFEM)
add_subdirectory(CoupledBVPs)
add_subdirectory(ContourPlot)
add_subdirectory(LaxWendroffScheme)
add_subdirectory(FluxLimitedFV)
add_subdirectory(FiniteVolumeSineConsLaw)
add_subdirectory(ExtendedMUSCL)
add_subdirectory(ErrorEstimatesForTraces)
add_subdirectory(EngquistOsherNumericalFlux)
add_subdirectory(ElectrostaticForce)
add_subdirectory(SDIRK)
add_subdirectory(RegularizedNeumannProblem)
add_subdirectory(QuasiInterpolation)
add_subdirectory(ODESolve)
add_subdirectory(NonLinSchroedingerEquation)
add_subdirectory(MixedFEMWave)
add_subdirectory(UpwindFiniteVolume)
add_subdirectory(UnstableBVP)
add_subdirectory(TransformedConsLaw)
add_subdirectory(StableEvaluationAtAPoint)
add_subdirectory(SemiLagrangian)
add_subdirectory(SDIRKMethodOfLines)
add_subdirectory(1DWaveAbsorbingBC)
add_subdirectory(ExpFittedUpwind)
add_subdirectory(FVPsystem)
add_subdirectory(LinHypDampWaveSys)
add_subdirectory(StokesPipeFlow)
add_subdirectory(FVMIsentropicEuler)
add_subdirectory(IRKDegenerateEvl)
add_subdirectory(FVMShallowWater)
add_subdirectory(LeapfrogDissipativeWave)
add_subdirectory(LeastSquaresAdvection)
add_subdirectory(StokesMINIElement)
add_subdirectory(NeumannDataRecovery)
add_subdirectory(TaylorHoodNonMonolithic)
add_subdirectory(HodgeLaplacian2D)
add_subdirectory(MagDiffWire)
